# saritasa-jira-report-generator

./: .flake8  .gitignore  .isort.cfg  README.md  local_tools.txt  pyproject.toml  requirements.in  requirements.txt
src/jira_report_generator/: __init__.py  app.py  cli.py  constants.py
src/jira_report_generator/static/: script.js  style.css  template.html
src/jira_report_generator/tables/: assignees.py  backlog.py  board.py  epics.py  issues.py  project.py  sprints.py  statuses.py  stories.py  unversioned.py  versions.py
src/jira_report_generator/utils/: colors.py  data.py  formatters.py  tables.py  tabs.py  tags.py
