[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jira_report_generator"
version = "1.4.0"
authors = [
  { name="Denis Maitak", email="denis.maitak@saritasa.com" },
]
description = "Just JIRA project report generator."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jira==3.8.0",
    "pandas==2.2.3",
    "python-decouple==3.8",
    "jinja2==3.1.4",
    "numpy==2.1.3",
]

[project.scripts]
jira-report-generator = "jira_report_generator.cli:main"

[project.urls]
"Homepage" = "https://github.com/saritasa-nest/saritasa-python-jira-report-generator"
"Bug Tracker" = "https://github.com/saritasa-nest/saritasa-python-jira-report-generator/issues"

[tool.setuptools.package-data]
"jira_report_generator.static" = ["*.js", "*.css", "*.html"]
